coordinator dashboard updated

--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Coordinator/CoordinatorDashboard.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Coordinator/CoordinatorDashboard.cshtml
@@ -22,10 +22,10 @@
     <ul class="nav-links">
         <div class="top-links">
             <li class="active">
-                <a href="@Url.Action("AdviserDashboard", "Advisor")"><i class="fas fa-home"></i><span>Dashboard</span></a>
+                <a href="@Url.Action("CoordinatorDashboard", "Coordinator")"><i class="fas fa-home"></i><span>Dashboard</span></a>
             </li>
             <li>
-                <a href="@Url.Action("AdviseeStudents", "Advisor")"><i class="fas fa-users"></i><span>Advisee Course Registration</span></a>
+                <a href="@Url.Action("CoordinatingCourses", "Coordinator")"><i class="fas fa-book"></i><span>Coordinating Courses</span></a>
             </li>
         </div>
     <div class="bottom-links">
